funcionando a chamada do serviço google search

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,3 +1,5 @@
-<div class="container">
+<div class="comp-content">
+  <div class="container">
     <app-insta-search></app-insta-search>
+  </div>
 </div>
