--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,13 @@
-<nav class="navbar navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">Insta Search</a>
-  </div>
-</nav>
+<div class="comp-header">
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+      LOGO
+      <!-- Data POA -->
+    </a>
+    <button
+      type="button"
+      class="btn btn-dark button-menu"
+    >
+    </button>
+  </nav>
+</div>
