--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
-<app-content></app-content>
+<div class="comp-app bg-light">
+    <app-header></app-header>
+    <app-content></app-content>
+</div>
